# demorpheus

./: CMakeLists.txt  classifier.cpp  classifier.h  demorpheus.cpp  graphTopology.cpp  graphTopology.h  macros.h  process_log.cpp  process_wrapper
disasm/: CMakeLists.txt  Makefile  bfd.h  com_disas.cpp  com_disas.h  disrun.cpp  flow.cpp  flow.h  i386-dismod.c  i386-dismod.h  inst_types.h  libdasm.c  libdasm.h
hdd/: CMakeLists.txt  FindDecryptorPlugin.cpp  FindDecryptorPlugin.h  findDecryptor.conf  findDecryptor.ids  main.cpp  mediator.h
hdd/lib/: CMakeLists.txt  data.cpp  data.h  emulator.cpp  emulator.h  emulator_libemu.cpp  emulator_libemu.h  fdostream.cpp  fdostream.h  finddecryptor.cpp  finddecryptor.h  finder-cycle.cpp  finder-cycle.h  finder-getpc.cpp  finder-getpc.h  finder-libemu.cpp  finder-libemu.h  finder.cpp  finder.h  reader.cpp  reader.h  reader_pe.cpp  reader_pe.h  timer.cpp  timer.h
racewalk/: CMakeLists.txt  README  racewalk.cpp  racewalk.h  racewalkDetect.cpp  racewalkrun.cpp  run
sigfree/: CMakeLists.txt  analyzer.cpp  analyzer.h  eifg.cpp  eifg.h  state.cpp  state.h
